Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -49,12 +49,16 @@
 </br>
 </br>
 
-**2) Append Structure 필드 정의**
+**4) Append Structure 필드 정의**
 
 <img width="602" height="250" alt="image" src="https://github.com/user-attachments/assets/57701f4f-8450-411a-891f-6aedfa9d0d20" />
 
 </br>
 </br>
+
+**5) `.append` 필드 추가**
+
+<img width="673" height="270" alt="image" src="https://github.com/user-attachments/assets/42f98f40-1ea1-4b96-9bfd-0b02a6a1fc3b" />
 
 </br>
 </br>
