Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -30,6 +30,11 @@
 - 1개의 테이블 → 여러 개 Append Structure 가능
 </br>
 
+- `APPEND` = 테이블 확장용(필드 추가), 한 테이블 전용.
+- `INCLUDE` = 구조 재사용용(구조 끼워넣기), 여러 테이블에서 사용.
+- 프로그램에서는 둘 다 그냥 필드처럼 동일하게 접근 가능.
+</br>
+
 **1) `Extras -> Enhancement Category` 클릭**
 
 <img width="497" height="364" alt="image" src="https://github.com/user-attachments/assets/ba6750d8-ae3d-40d2-b733-fc8ac37f79cb" />
@@ -60,6 +65,7 @@
 
 <img width="673" height="270" alt="image" src="https://github.com/user-attachments/assets/42f98f40-1ea1-4b96-9bfd-0b02a6a1fc3b" />
 
+</br>
 </br>
 </br>
 
