Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -55,7 +55,7 @@
 </br>
 
 **4) Append Structure 필드 정의**
-
+- 충돌 방지로 필드 이름은 `ZZ YY` 로 시작
 <img width="602" height="250" alt="image" src="https://github.com/user-attachments/assets/57701f4f-8450-411a-891f-6aedfa9d0d20" />
 
 </br>
