--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -76,6 +76,9 @@
 </br>
 
 # < Table Join 방법 >
+- JOIN은 DB 직접 접근(버퍼 X), DB View는 버퍼 사용(버퍼 O)
+</br>
+
 ## 1) DDIC(Database) View를 활용
 - DB 레벨에서 여러 테이블을 미리 조인하여 가상 테이블(View) 생성
 - 재사용 가능, SQL 최적화, 코드 간결
