Update 프로그래밍 문법과 로직 최종.md

--- a/ABAP 기초/프로그래밍 문법과 로직 최종.md
+++ b/ABAP 기초/프로그래밍 문법과 로직 최종.md
@@ -1,1 +1,416 @@
 # 프로그래핑 문법과 로직 (11.14)
+</br>
+
+### SAP GUI 기본 구성 요소
+1. Command Field (커맨드필드)
+   
+   - TCODE(트랜잭션 코드) 입력하는 칸
+2. Title Bar (타이틀바)
+   - 현재 화면의 제목 표시
+3. Application Toolbar (어플리케이션 툴바)
+   - 프로그램 기능 버튼들이 위치하는 영역
+</br>
+
+<img width="463" height="363" alt="image" src="https://github.com/user-attachments/assets/cd48b735-5b5d-4984-9c00-e7dc92999f3f" />
+
+</br>
+</br>
+
+### TCODE / 명령어
+- `/N` : 현재 TCODE 정료
+- `/NXXXX` : 현재 창에서 TCODE 종료
+- `/ON` : 새창 열기
+- `/OXXXX` : 새창열고 TCODE 실행
+- `/ne` : 모든 창닫고 로그오프
+- `/nend` : 팝업으로 확인 후 닫고 로그오프
+- `/i` : 현재 화면 닫기
+</br>
+
+### TCODE 생성 방법
+- `SE93` 검색 -> Create (생성) 버튼을 클릭 -> `Program and selection screen (report transaction)`을 선택함
+  - `Program and dynpro` : 화면(Screen/Dynpro) 번호를 지정하여, 그 화면부터 상호작용을 시작
+  - `Program and selection screen` : 선택 화면(Selection Screen)을 먼저 띄워서 사용자에게 조건을 입력받고 결과를 출력
+  - `Method of a class`: ABAP Class의 특정 메서드(Method)를 실행하여 비즈니스 로직을 시작
+  - `Transaction with parameters` : 기존 TCODE를 실행하되, 특정 파라미터를 미리 세팅하여 자동 실행
+- 생성한 TCODE를 창에 입력하면 이동. ex) `YPROGB03_ASSIGNMENT1`
+    
+  <img width="370" height="368" alt="image" src="https://github.com/user-attachments/assets/c0b9c4cf-b765-4e4a-b6f5-02971aa88c8d" />
+
+</br>
+</br>
+
+### SAP Input Help
+- 특정 입력 필드에서 값 목록을 보여주는 기능을 총칭
+- 모두 같은 개념으로 F4 키를 누르면 뜨는 팝업
+  
+- 1) Search Help
+  2) Value Help
+  3) Possible Entry
+  4) F4 Help
+  5) Input Help
+</br>
+
+### ABAP 기본 개념
+- SAP 시스템에서 사용하는 프로그래밍 언어
+- 초기에는 COBOL 기반의 절차지향 언어, 이후 객체지향(OOP) 기능 추가
+- 소문자 구분 없음 → 내부적으로는 대문자로 처리
+- 단, 문자열(‘HQ0’) 내부의 값은 자동 대문자 변환이 되지 않음 → 직접 대문자로 입력해야 함
+- 옵션을 통해 소문자 값 전달도 가능
+</br>
+
+### SAP ERP란?
+- 기업의 다양한 데이터와 프로세스를 통합하여 관리하는 시스템
+</br>
+
+### SAP 주요 모듈
+- FI(financial accounting) : 재무회계 관리를 위한 모듈. 회사 데이터 처리와 재무 보고서 작성
+-	CO(controlling) : 내부 회계 및 경영 회계를 관리, 비용관리/수익성분석/예산처리
+-	MM (matrials managements) : 자재 관리하는 모듈, 구매/입고/조회를 관리함
+-	PP(product planning) : 제조 및 생산과정을 관리하고 계획
+-	SD(sales and distribution) : 판매와 유통관리를 위한 모듈, 주문/배송/물류 관리
+-	HR(Human Resource) : 인사관리를 위한 모듈. 인사정보/급여. 교육관리
+</br>
+
+### SAP 시스템 버전
+1. SAP ECC (ERP Central Component)
+   
+   - 기존 SAP Business Suite의 핵심 ERP
+   - R/3 기반 ERP 시스템
+3. SAP S/4 HANA (2015~)
+   
+   - SAP의 최신 ERP 제품
+   - In-Memory DB인 SAP HANA 기반으로 성능 대폭 향상
+   - 실시간 분석 및 처리 가능
+</br>
+
+### SAP 3-Tier 구조
+1) Presentation Layer (프레젠테이션 계층)
+   
+   - 사용자가 SAP를 사용하는 화면(UI)
+   - SAP GUI, 웹(Fiori) 등이 해당
+
+3) Application Layer (애플리케이션 계층)
+   - ABAP 프로그램이 실행되는 계층
+   - 비즈니스 로직 처리 (주문 생성, 재고 계산 등)
+   - Presentation ↔ Database 사이에서 중간 역할
+
+3) Database Layer (데이터베이스 계층)
+   - 모든 SAP 데이터를 저장하는 곳
+   - HANA, Oracle 등 DBMS 사용
+</br>
+
+### SAP Client 구성
+- SAP는 여러 Client를 두어 데이터를 독립적으로 관리
+- 일반 Client 번호 예시:
+  
+  - 100 : 개발(DEV)
+  - 200 : 품질(QAS)
+  - 300 : 운영(PRD)
+- Cross-Client(800번): 개발·품질 공용 설정, 클라이언트 구분 없이 적용
+</br>
+
+### SAP Object 종류
+- Standard Object: SAP에서 제공하는 기본 오브젝트(프로그램, 테이블 등)
+- CBO (Customer Bolt-On): 고객사 개발 오브젝트(프로그램, 테이블, 기타)
+  
+  - CBO(Customer Bolt-On) 네이밍 규칙
+    
+    - SAP에서 새로 개발하는 오브젝트는 Z 또는 Y로 시작 (이관 가능)
+
+      - Z: 일반 커스텀 오브젝트
+      - Y: 회사 내부 표준 오브젝트
+   - 예시
+     - 패키지: ZPACB##_01
+     - 프로그램: /OSE09, /NSE09
+       
+       - O : 새로운 SAP GUI 창(세션)을 열고 트랜잭션 실행
+       - N : 현재 세션에서 트랜잭션 실행
+</br>
+
+### 패키지(Package)와 로컬 객체(Local Object)
+1) Package
+   
+   - 이관 대상 Object를 담는 패키지
+   - 개발 완료 후 다른 서버(QAS, PRD)로 이관 가능
+
+2) Local Object ($TMP)
+   
+   - 개인 계정에서 사용하는 임시 패키지
+   - 이관 불가, 개인 테스트용
+</br>
+
+### SAP 주요 개발 툴 (T-Code)
+- SAP 개발 시 자주 사용하는 트랜잭션 코드(T-Code)와 기능 정리
+
+| T-Code | 기능 |
+|--------|-------|
+| **SE51** | Screen Painter (화면 개발) |
+| **SE41** | Menu Painter (메뉴 개발) |
+| **SE38** | ABAP Editor (프로그램 작성) |
+| **SE37** | Function Builder (함수 모듈 개발) |
+| **SE24** | Class Builder (클래스 개발) |
+| **SE11** | ABAP Dictionary – **가장 중요** (테이블, 도메인, 뷰 등 데이터 정의) |
+| **SE80** | Object Navigator (ABAP Workbench) – **가장 중요**, 오브젝트 통합 관리 |
+| **SE93** | 트랜잭션 코드(T-Code)를 생성·조회·관리하는 화면 |
+
+</br>
+
+### Transport(이관) 흐름
+- 개발 → 품질 → 운영 순으로 안전하게 이동
+- **Tip:** STMS(Transaction Management System)에서 **안쪽 오브젝트부터 순서대로 릴리즈** 후 이관
+- 릴리즈 = 이관하기 전에 ‘개발 완료’라고 확정하는 버튼
+
+| 흐름 | 설명 | 도구 |
+|------|------|------|
+| 개발(DEV) → 품질(QAS) | 개발 완료 후 기능 검증 | CTS (Change and Transport System) |
+| 품질(QAS) → 운영(PRD) | 테스트 완료 후 실제 업무 환경 적용 | CTS |
+<img width="451" height="231" alt="image" src="https://github.com/user-attachments/assets/da843ad7-23e0-42f0-ae7e-474d71d2361f" />
+
+</br>
+</br>
+
+- 순서대로 코드 문법 체크 => 활성화(activate) => 디버그
+<img width="508" height="43" alt="image" src="https://github.com/user-attachments/assets/552be000-918d-4fbd-a0cd-735d7deef1bd" />
+</br>
+</br>
+
+- 상위 레벨에 어디에 들어가 있는지 파악 가능
+<img width="506" height="47" alt="image" src="https://github.com/user-attachments/assets/3e423dce-8130-46d1-8f1a-a9f0e6a42f96" />
+</br>
+</br>
+</br>
+</br>
+
+
+### ABAP 프로그램 유형
+- SAP에서 자주 사용하는 ABAP 프로그램 유형(Type)과 특징 정리
+
+| Type | 용도 | 특징 |
+|------|------|------|
+| **1 (Report Program)** | 조회용(R) | 데이터를 조회하고 리포트 출력 (R 기능) |
+| **M (Screen Program)** | 화면 기반 CRUD | 생성, 조회, 수정, 삭제 기능 가능 |
+</br>
+
+---
+</br>
+
+## < ABAP 기본 문법 >
+- 모든 문장은 마지막에 마침표(.)
+- 문자열은 반드시 홑따옴표 `' '` 사용
+  
+  - `" "`(쌍따옴표)는 문자열 아님 → 주석
+</br>
+
+**1) PARAMETERS**
+- 사용자로부터 입력값을 받기 위한 키워드
+- 타입을 안 적으면 기본 타입은 C(문자) 길이 1
+- 옵션들은 대부분 순서에 상관없이 쓸 수 있음
+```abap
+PARAMETERS <변수명> TYPE <데이터타입>.
+```
+```abap
+PARAMETERS pa_name TYPE string.  " 문자열 입력값 받음
+PARAMETERS pa_num  TYPE I.       " 정수형 입력값 받음
+PARAMETERS pa_num  TYPE C LENGTH 4.
+PARAMETERS pa_num(4)  TYPE C.      " 위와 같은 코드
+```
+</br>
+
+**1-1) PARAMETERS 옵션 - OBLIGATORY**
+- 필수 입력값. 사용자가 값을 입력하지 않으면 프로그램 실행 불가.
+```abap
+PARAMETERS pv_data TYPE c OBLIGATORY.      " pv_data는 반드시 입력해야 함
+```
+</br>
+
+**1-2) PARAMETERS 옵션 - DEFAULT '값'**
+- 해당 파라미터가 처음 실행될 때 자동으로 기본값을 넣어줌.
+```abap
+PARAMETERS pv_data TYPE c DEFAULT 'Hi'.      " 프로그램 실행 시 pv_data에 자동으로 'Hi' 값이 들어감
+```
+</br>
+
+**1-3) PARAMETERS 옵션 - LOWER CASE**
+- 소문자 입력 허용.
+- 기본적으로 PARAMETERS는 입력값을 대문자로 변환함 → LOWER CASE 사용 시 그대로 유지.
+```abap
+PARAMETERS pv_data2 TYPE c LOWER CASE.
+```
+</br>
+
+**1-4) PARAMETERS 옵션 - VISIBLE LENGTH n**
+- 입력필드가 화면에 표시되는 길이만 제한.
+- 실제 필드 길이와 화면 표시 길이는 다르게 설정 가능.
+```abap
+PARAMETERS pv_data2(10) TYPE c VISIBLE LENGTH 2.      " 데이터 길이는 10이지만 화면에는 입력창이 2칸만 보임
+```
+</br>
+</br>
+
+**2) WRITE**
+- 화면에 값을 출력하는 키워드
+```abap
+WRITE <값>. 또는 WRITE: <값1>, <값2>.
+```
+```abap
+WRITE 'Hello World!'.       " 문자열 출력
+WRITE: 'Hello', pa_name.    " 문자열과 변수 값 함께 출력
+WRITE: 'YOUR input: ', pa_num.
+WRITE: 'Result: ', gv_result.
+
+WRITE:/ 'Result: ',
+      / gv_result,
+      / pa_num.             " / + 띄어쓰기 : 줄바꿈 효과가 남
+```
+</br>
+</br>
+
+**3) NEW-LINE**
+- 화면 출력 시 줄바꿈
+```abap
+NEW-LINE.
+```
+</br>
+</br>
+
+**4) DATA**
+- 변수를 선언하는 키워드
+```abap
+DATA <변수명> TYPE <데이터타입>.
+```
+```abap
+DATA gv_result TYPE I.  " 정수형 변수 선언
+```
+</br>
+</br>
+
+**5) MOVE**
+- 값을 다른 변수에 할당
+```abap
+MOVE <원본> TO <대상>.
+```
+```abap
+MOVE pa_num TO gv_result.  " pa_num 값을 gv_result에 복사
+```
+</br>
+</br>
+
+**6) ADD**
+- 산술 연산으로 값을 더함
+```abap
+ADD <숫자/변수> TO <변수>.
+```
+```abap
+ADD 1 TO gv_result.  " gv_result에 1 더하기
+```
+</br>
+</br>
+
+**7) RADIOBUTTON GROUP**
+- 동일한 그룹 안에서 하나만 선택 가능한 옵션 버튼
+```abap
+PARAMETERS pv_rad1 RADIOBUTTON GROUP rad1.      " pv_rad1과 pv_rad2는 같은 그룹(rad1)
+PARAMETERS pv_rad2 RADIOBUTTON GROUP rad1.      " 둘 중 한 개만 'X' 값을 가질 수 있음
+
+pv_rad1 RADIOBUTTON GROUP rad1 DEFAULT 'X'.      " 실행 시 기본으로 pv_rad1이 선택됨
+```   
+</br>
+</br>
+
+**8) AS CHECKBOX**
+- 체크박스 형태 입력.
+- 체크됨 → `'X'`, 체크 안됨 → `' '` (공백)
+```abap
+PARAMETERS pv_chk AS CHECKBOX.
+```
+</br>
+</br>
+
+**9) 주석(Comment)**
+- `"` 또는 `*` 사용
+  
+  - `"` : 한 줄의 끝까지 주석
+  - `*` : 라인 맨 앞에 쓰면 전체 라인을 주석 처리
+```abap
+PARAMETERS pa_num TYPE I. " 숫자타입 pa_num 입력값 받음
+DATA gv_result TYPE I.    " 변수 선언
+```
+</br>
+</br>
+
+---
+</br>
+
+## < 실습 코드 >
+### 실습 1
+```abap
+REPORT ZPROGB03_0001.
+PARAMETERS pa_num TYPE I. " 숫자타입 pa_num 입력값 받음
+DATA gv_result TYPE I.  " 숫자타입 gv_result 변수 선언
+
+MOVE pa_num TO gv_result. " pa_num 값을 gv_result에 넣음
+
+ADD 1 TO gv_result.   " gv_result에 1을 더함
+
+WRITE: 'YOUR input: ', pa_num.  " 문자와 pa_num 값 함께 출력
+
+NEW-LINE. " 줄바꿈
+
+WRITE: 'Result: ', gv_result.   " 문자와 gv_result 값 함께 출력
+```
+</br>
+</br>
+
+### 실습 2
+```abap
+REPORT ZBC400_03_HELLO.
+
+PARAMETERS pa_name TYPE string.
+
+WRITE 'Hello World!'.
+
+NEW-LINE.
+
+WRITE: 'Hello', pa_name.
+```
+</br>
+</br>
+
+### 실습 3
+```abap
+REPORT yprogb03_0002.
+
+PARAMETERS input TYPE I.
+ADD 10 TO input.
+WRITE input.
+```
+</br>
+</br>
+
+### 실습 4
+```abap
+PARAMETERS: pv_data(10)  TYPE c OBLIGATORY  DEFAULT 'Hi',
+            pv_data2(10) TYPE c LOWER CASE VISIBLE LENGTH 2.
+
+" OBLIGATORY : 필수값 처리
+" LOWER CASE : 소문자 허용
+" DEFAULT : 기본값 적용
+" VISIBLE LENGTH : 화면에 보여지는 입력필드의 길이 저장
+
+PARAMETERS: pv_rad1
+            RADIOBUTTON GROUP rad1 DEFAULT 'X',
+            pv_rad2
+            RADIOBUTTON GROUP rad1,
+            pv_chk  AS CHECKBOX.
+
+WRITE: pv_data, pv_data2.
+
+NEW-LINE.
+
+WRITE: 'Radio, Check', pv_rad1, pv_rad2, pv_chk.
+```
+
+</br>
+</br>
+</br>
+</br>
